# XdgFileChooser

./: CMakeLists.txt  LICENSE  README.md
include/xdg-file-dialog/: xdg-file-dialog.h
src/: xdg-file-dialog.cpp
